<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.perpectiveteam.plugins</groupId>
  <artifactId>sonar-ai-summarize</artifactId>
  <packaging>sonar-plugin</packaging>
  <version>1.0.0</version>

  <name>Example Plugin for SonarQube Server 10.x</name>
  <description>Example of Plugin for SonarQube Server: Foo Language, FooLint, Custom Metrics and MeasureComputers</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <sonar.apiVersion>11.3.0.2824</sonar.apiVersion>
    <sonar.testingHarnessVersion>10.7.0.96327</sonar.testingHarnessVersion>
    <jdk.min.version>17</jdk.min.version>
    <sonar.sources>src/main/java,src/main/js</sonar.sources>
    <sonar.requiresDb>true</sonar.requiresDb>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20250107</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.19.0</version>
    </dependency>


    <dependency>
      <groupId>org.sonarsource.sonarqube</groupId>
      <artifactId>sonar-plugin-api-impl</artifactId>
      <version>24.12.0.100206</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.sonarsource.api.plugin</groupId>
      <artifactId>sonar-plugin-api</artifactId>
      <version>${sonar.apiVersion}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.17.0</version>
    </dependency>

    <dependency>
      <groupId>org.sonarsource.sonarqube</groupId>
      <artifactId>sonar-testing-harness</artifactId>
      <version>${sonar.testingHarnessVersion}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>sonarqube</groupId>
      <artifactId>sonar-source</artifactId>
      <version>24.12.0.100206</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/sonar-application-24.12.0.100206.jar</systemPath>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
        <artifactId>sonar-packaging-maven-plugin</artifactId>
        <version>1.23.0.740</version>
        <extensions>true</extensions>
        <configuration>
          <pluginKey>example</pluginKey>
          <pluginClass>org.perpectiveteam.plugins.aisummarize.AiSummarizePluginBootstrap</pluginClass>
          <!-- Optional, only if you are sure to support older versions of the plugin API than the one you are compiling against -->
          <pluginApiMinVersion>9.9</pluginApiMinVersion>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
